@@ -1,4 +1,6 @@
 Development
+	Fix to allow --random to be set correctly on commandline
+	Fix problem with crashing when switching between random and non-random order
 	Fix problem with parse_basic where buffer is blank and so the path was valid, but filename was not
 		and so the file was thought to be a playlist and garbage was loaded on the list
 	Rework Edit->Preferences dialog
